# icp-crud-dapp

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/my_crud_dapp_backend/: Cargo.toml
src/my_crud_dapp_backend/src/: lib.rs  my_crud_dapp_backend.did
src/my_crud_dapp_frontend/: ic-assets.json  package-lock.json  package.json  vite.config.js
src/my_crud_dapp_frontend/src/: App.js  App.jsx  main.jsx
